<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_label">Jump in Jump out</string>
    <string name="contentSplash">Splash Screen</string>
    <string name="appNameShort">JU</string>
    <string name="appCode">"JU"</string>
    <string name="androidAppLink">https://play.google.com/store/apps/details?id=com.jumpinjumpout.apk\nCheck out this great app.\n Look for Jump.in.Jump.out rideshare on Google Play Store.\n"</string>
    <string name="contactUs">"Contact Us"</string>
    <string name="feedback">"FeedBack/Questions"</string>
    <string name="advertise">"Advertise with Us"</string>
    <string name="advertise_interest">"Interested in advertising in "</string>
    <string name="feedback_for">"Feeback for "</string>
    <string name="rateAndroid">"Rate on Google Play"</string>
    <string name="social">"Social"</string>
    <string name="shareFacebook">"Like using Facebook"</string>
    <string name="shareTwitter">"Follow on Twitter"</string>
    <string name="website">"<u>www.jumpinjumpout.com</u>"</string>
    <string name="gps_enable">"GPS is disabled. This module requires the GPS to be on"</string>
    <string name="no_gps_message">"Enable GPS?"</string>
    <string name="home_settings">Settings</string>
    <string name="homeSettingsDesc">Add address, Options ...</string>
    <string name="homeGroup">Commuting Communities</string>
    <string name="homeGroupDesc">Groups</string>
    <string name="homeHelp">Help</string>
    <string name="homeHelpDesc">Quick start, FAQs, ...</string>
    <string name="home_feedback">Feedback</string>
    <string name="home_FeedbackDesc">Contact Us, Rate Us, FB, ...</string>
    <string name="atShare">"RS_S"</string>
    <string name="atRunSmartShehar">"RS_RS"</string>
    <string name="atDownloadSmartShehar">"RS_LS"</string>
    <string name="unknown">"\?"</string>
    <string name="TAB_ONE">JOIN GROUP</string>
    <string name="TAB_TWO">MY GROUP</string>
    <string name="waitingForLocation">Waiting for location</string>
    <string name="menu_share">Share</string>
    <string name="menu_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="address_search_hint">Search Address</string>
    <string name="hintStartAddress">Start address</string>
    <string name="hintDestinationAddress">Destination address</string>
    <string name="traffic">(depending on traffic)</string>
    <string name="rideStartOKHint">When you Create Trip, passengers on your route will be able to find you and you will see them on the map.\nWhen you start moving, the system will automatically notify passenger who have joined your trip</string>
    <string name="tripActive">Trip active. \nPassengers will see you</string>
    <string name="trackingTrip">You are now tracking a trip you joined</string>
    <string name="pause">Pause Sharing</string>
    <string name="resume">Resume</string>
    <string name="endTrip">End Trip</string>
    <string name="create_trip">Create trip</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="crash_toast_text">App Crashed</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="track">Track</string>
    <string name="trackNotify">Sharer and you will get notifications about each other</string>
    <string name="location_settings_title">Switch GPS location ON</string>
    <string name="location_settings">Setting</string>
    <string name="location_skip">Skip</string>
    <string name="location_instructions">Jump.in.Jump.out will work best when your current location is known.\n\n• Turn Location ON using option below.\n</string>
    <string name="location_instructions_gps">You have network location on, but GPS is deactivated.\nYour location accurcay will be low causing problems in using the system.\nTurn on GPS\n</string>
    <string name="never_show_again">Never show this again</string>
    <string name="no_location">No location. Please turn on GPS</string>
    <string name="no_location_main">Make sure you location mode is set to "High Accuracy" before sharing your trip.\n\nPlease Change your Location mode by using option below</string>
    <string name="no_internet_main_2">You need Internet Connection to create a trip.\n\nPlease switch Mobile Data or Wi-Fi ON using option below.</string>
    <string name="nocallinfo">Call information not available</string>
    <string name="nochatinfo">Chat information not available</string>
    <string name="verify">Verify</string>
    <string name="myPhoneNo">Enter your phone number</string>
    <string name="next">Next</string>
    <string name="usetype">I will</string>
    <string name="passengerFriends">Hitch rides with friends</string>
    <string name="poolFriends">Pool rides with friends Only</string>
    <string name="passengerAll">Hitch rides with friends and others</string>
    <string name="poolAll">Pool rides with friends and others</string>
    <string name="commercial">Offer rides as a paid licensed driver</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="vehicleNo">Vehicle number</string>
    <string name="licenseNo">License number</string>
    <string name="vehicleMaker">Vehicle maker (eg. Ford)</string>
    <string name="vehicleModel">Vehicle model (eg. Taurus)</string>
    <string name="vehicleColor">Vehicle color (use simple names like Green)</string>
    <string name="passengerCapacity">Passenger capacity (seats)</string>
    <string name="isfriend">Is it a friend?</string>
    <string name="inpath">Passing near your location</string>
    <string-array name="journeyStarts">
        <item>Right away</item>
        <item>in 5 min.</item>
        <item>in 10 min.</item>
        <item>in 15 min.</item>
        <item>in 20 min.</item>
        <item>in 30 min.</item>
    </string-array>
    <string name="noPassengersOnRoad">Its lonely out there!</string>
    <string name="dummytext">This is to test layout</string>
    <string name="join">Pick me up</string>
    <string name="jumpIn">Jump In!</string>
    <string name="jumpOut">Jump Out!</string>
    <string name="pCommunity">Private Community</string>
    <string name="gDescription">Community Description</string>
    <string name="gName">Community Name</string>
    <string name="invite">Invite Your Community And People</string>
    <string name="groupinvite">Select Community</string>
    <string name="peopleinvite">Select People</string>
    <string name="inviteall">Invite</string>
    <string name="trip_member_all">Invite your friends who will then get automatic notifications of your trip.  \n\nIf you don\'t invite anybody, they will still be able to see you on the Find Jump.in screen.</string>
    <string name="fullName">Full Name</string>
    <string name="agrUser">Age</string>
    <string name="submit">Submit</string>
    <string name="user_home">Home</string>
    <string name="user_work">Work</string>
    <string name="later">Later</string>
    <string name="findshare">Share JumpInJumpOut</string>
    <string name="cameraphoto">Take a selfie</string>
    <string name="or">Or</string>
    <string name="notnow">Not Now</string>
    <string name="sign_out">Sign Out</string>
    <string name="availablerides">Available Rides</string>
    <string name="cabsaround">Cabs Around</string>
    <string name="usersusingapp">Users Using App</string>
</resources>