<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:text="@string/invite"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ListView
            android:id="@+id/gplist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"></ListView>

        <LinearLayout
            android:id="@+id/no_trip_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/ttrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/trip_member_all"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/ingroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight=".5"
                    android:drawableTop="@mipmap/add_community"
                    android:gravity="center"
                    android:text="@string/groupinvite" />

                <TextView
                    android:id="@+id/inpeople"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight=".5"
                    android:drawableTop="@mipmap/ic_add_people"
                    android:gravity="center"
                    android:text="@string/peopleinvite" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/notNow"
                    style="@style/ButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight=".5"
                    android:background="@drawable/btn_red"
                    android:text="@string/later" />

                <Button
                    android:id="@+id/done"
                    style="@style/ButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight=".5"
                    android:background="@drawable/btn_green"
                    android:text="@string/inviteall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>