<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/bottom_tab_layout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/black_gradiant"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAvailableRides"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center|bottom"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/custom_gradiant"
            android:padding="2dp"
            android:text="@string/availablerides"
            android:textColor="@android:color/white"
            android:textSize="16sp"></Button>

        <Button
            android:id="@+id/btnCabsAround"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center|bottom"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/custom_gradiant"
            android:padding="2dp"
            android:text="@string/cabsaround"
            android:textColor="@android:color/white"
            android:textSize="16sp"></Button>

        <Button
            android:id="@+id/btnUserUsingApp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center|bottom"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/custom_gradiant"
            android:padding="2dp"
            android:text="@string/usersusingapp"
            android:textColor="@android:color/white"
            android:textSize="16sp"></Button>
    </LinearLayout>
</merge>