<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flTrackDriver"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/llJoinCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCancel"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_red"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnJoin"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_green"
                android:text="@string/join" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llJumpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llJoinCancel"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/btnJumpIn"
                style="@style/ButtonText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_green"
                android:text="@string/jumpIn"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnJumpOut"
                style="@style/ButtonText"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_red"
                android:text="@string/jumpOut"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnShowTicket"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_yellow"
                android:text="Ticket"
                android:onClick="onClickShowTicket"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>
