<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlFromTo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/ac_from"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/BackgroundLight"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hintStartAddress"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="5dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ac_to"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ac_from"
                    android:layout_marginTop="10dp"
                    android:background="@color/BackgroundLight"
                    android:gravity="center_vertical"
                    android:hint="@string/hintDestinationAddress"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnGo"
                    style="@style/ButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ac_to"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_green"
                    android:text="@string/create_trip" />
            </RelativeLayout>

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rlFromTo"></ListView>
        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FlashBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/BackgroundLight"
                    android:gravity="center_vertical"
                    android:text="@string/dummytext"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvStatus"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:background="#00FFFF"
                    android:gravity="center"
                    android:text="@string/findshare"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>
        </ScrollView>
    </FrameLayout>

</FrameLayout>